--- a/views/temp.jade
+++ b/views/temp.jade
@@ -10,3 +10,63 @@ li
                                  button(id='test', value='dsfds') test
                           div(class='tab-pane',id='tab3')
                               p Howdy, I'm in Section 2.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--
+         div.row-fluid.one-post
+                    div.span1
+                        img(src='#{post.creator.thumbnails}',class='img-polaroid img-rounded')
+                    div.span11.post-content
+                        header
+                            span.publisher-anchor-color
+                                a(href='#user') #{post.creator.name}
+                            span(class='bullet',aria-hidden='true') •
+                            a(href='#comment-693320343',class='time-ago') #{post.fromNow}
+                        h5 #{post.title}
+                        p !{post.content}
+
+           div.span1
+                               img(src='#{comment.creator.thumbnails}',class='img-polaroid img-rounded')
+
+                           div.span11.post-content
+                               header
+                                   span.publisher-anchor-color
+                                       a(href='#user') #{comment.creator.name}
+                                   span(class='bullet',aria-hidden='true') •
+                                   a(href='#comment-693320343',class='time-ago') #{comment.fromNow}
+                               p !{comment.content}
+                           hr.soft
+
+
+        -->
