--- a/views/blog-one.jade
+++ b/views/blog-one.jade
@@ -23,6 +23,19 @@ block content
 
                             div(class='comment-content')
                                 !{post.content}
+        hr
+        div.row-fluid
+            div.span12
+                form(class='form-inline center',action='/comment',method='post')
+
+                      div.control-group
+
+                          div.controls
+                              input(name='postId',type='hidden',value='#{post._id}')
+                              textarea(class='span6', name='content',rows='2',placeholder='发表评论')
+                      div.control-group
+                          div.controls
+                              button(type='submit', class='btn btn-success') 发言
         hr.soft
         div.row-fluid
             h4 #{post.comments.length} 评论
@@ -41,21 +54,7 @@ block content
                                 div(class='comment-content')
                                     !{comment.content}
 
-        hr.soft
 
-
-        div.row-fluid
-            div.span12
-                form(class='form-inline center',action='/comment',method='post')
-
-                      div.control-group
-
-                          div.controls
-                              input(name='postId',type='hidden',value='#{post._id}')
-                              textarea(class='span6', name='content',rows='2')
-                      div.control-group
-                          div.controls
-                              button(type='submit', class='btn btn-success') 发言
 
 
 
