--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,9 @@
  * Designed and built with all the love in the world @chat by @soar.
  */
 body {
+
+    font-family: tahoma,sans-serif;
+    font-size: 13px;
     padding-top: 60px;
     padding-bottom: 40px;
 }
