--- a/views/post.jade
+++ b/views/post.jade
@@ -4,18 +4,19 @@ block append head
 
 block content
     body
-        div.container
+        div.container-fluid
             div.row-fluid
-                form(class='well form-inline center',action='/post',method='post')
-                    legend 发表
-                    div.control-group
-                        label(class='control-label', for='title') 标题：
-                        div.controls
-                            input(name='title',type='text',class='input-xlarge')
-                    div.control-group
-                        label(class='control-label', for='title') 内容：
-                        div.controls
-                            textarea(id='editor_id',class='span6', name='content',rows='5')
-                    div.control-group
-                        div.controls
-                            button(type='submit', class='btn btn-success') 发言
+                div.span12.well-no-back
+                    form(class='form-inline center',action='/post',method='post')
+                        legend 发表
+                        div.control-group
+                            label(class='control-label', for='title') 标题：
+                            div.controls
+                                input(name='title',type='text',class='input-xlarge',placeholder='最多40字符')
+                        div.control-group
+                            label(class='control-label', for='title') 内容：
+                            div.controls
+                                textarea(id='editor_id',class='span6', name='content',rows='5')
+                        div.control-group
+                            div.controls
+                                button(type='submit', class='btn btn-success') 发言
