change review back normal

--- a/views/includes/message.jade
+++ b/views/includes/message.jade
@@ -1,3 +1,9 @@
+script
+    //var info = '#{success}';
+    //if(_)
+    //alert(info);
+    //var errorInfo = '#{error}';
+    //alert(errorInfo);
 
 div.container
     if typeof(success) !== 'undefined' && success !== null && success!==''
