--- a/views/review/review-show.jade
+++ b/views/review/review-show.jade
@@ -9,22 +9,22 @@ block content
                 div(id='post-content',class='span8')
 
                 div(class='span4')
-                    p 不能发表
-                    ul
-                        li 政治
-                        li 低俗
-                        li 广告
-                        li 坟
-                        li 无意义
+                    p 有下列情景
+                        ul
+                            li 政治
+                            li 低俗
+                            li 广告
+                            li 坟
+                            li 无意义
                     p
-                        button(id='support', class='btn',name='support',value='可以发表') 可以发表
-                    p 可以发表
+                        button(id='support', class='btn',name='support',value='可以发表') 不能发表
+                    p 有如下情况
                         ul
                             li 内容真实
                             li 有积极意义
                             li 需要援助
                     p
-                        button(id='veto', class='btn',name='veto',value='不能发表') 不能发表
+                        button(id='veto', class='btn',name='veto',value='不能发表') 发表可以
                 <!-- Templates -->
                 script(type='text/template',id='post-template')
                     div(class='row-fluid')
