--- a/views/post/blog-one.jade
+++ b/views/post/blog-one.jade
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout/main
 
 block append head
 
@@ -7,7 +7,7 @@ block content
         div.well-no-back
             div.row-fluid
                 div.span12
-                    include includes/share
+                    include share
 
             div.row-fluid
                 div.span12
