--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,10 @@
-extends layout
+extends layout/main
 
 block append head
+    script(src='/javascripts/app/models.js')
     script(src='/javascripts/app/home.js')
+
+
     script
 
 
