--- a/views/post/blog-one.jade
+++ b/views/post/blog-one.jade
@@ -7,7 +7,7 @@ block content
         div.well-no-back
             div.row-fluid
                 div.span12
-                    include share
+                    include _share
 
             div.row-fluid
                 div.span12
