--- a/views/review/review-show.jade
+++ b/views/review/review-show.jade
@@ -1,6 +1,7 @@
-extends ../layout
+extends ../layout/review-layout
 
 block append head
+    script(src='/javascripts/app/models.js')
     script(src='/javascripts/app/review.js')
 block content
     body
@@ -8,7 +9,8 @@ block content
             div(class='row-fluid')
                 div(id='post-content',class='span8')
 
-                div(class='span4')
+                div(class='span4 well-no-back')
+                    h3 我觉得这篇文章
                     p 有下列情景
                         ul
                             li 政治
@@ -17,14 +19,14 @@ block content
                             li 坟
                             li 无意义
                     p
-                        button(id='support', class='btn',name='support',value='可以发表') 不能发表
+                        button(id='veto', class='btn btn-danger btn-large',name='veto',value='不能发表') 不能发表
                     p 有如下情况
                         ul
                             li 内容真实
                             li 有积极意义
                             li 需要援助
                     p
-                        button(id='veto', class='btn',name='veto',value='不能发表') 发表可以
+                        button(id='support', class='btn btn-success btn-large',name='support',value='可以发表') 可以发表
                 <!-- Templates -->
                 script(type='text/template',id='post-template')
                     div(class='row-fluid')
