--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -1,5 +1,4 @@
-extends ../layout
-
+extends ../layout/logo-layout
 
 block append head
     link(rel='stylesheet', href='/stylesheets/fileuploader.css')
