--- a/views/layout/logo-layout.jade
+++ b/views/layout/logo-layout.jade
@@ -3,53 +3,17 @@ html(lang='en')
     head
         block head
             title= title
-            meta(charset='utf-8')
-            meta(content='width=device-width, initial-scale=1.0', name='viewport')
-            link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-            link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
-            link(rel='stylesheet', href='/stylesheets/style.css')
 
+            include _meta
+            include _css
 
-            link(href='/ico/apple-touch-icon-144-precomposed.png', sizes='144x144', rel='apple-touch-icon-precomposed')
-            link(href='/ico/apple-touch-icon-114-precomposed.png', sizes='114x114', rel='apple-touch-icon-precomposed')
-            link(href='/ico/apple-touch-icon-72-precomposed.png', sizes='72x72', rel='apple-touch-icon-precomposed')
-            link(href='/ico/apple-touch-icon-57-precomposed.png', rel='apple-touch-icon-precomposed')
-
-            include includes/logo
+            include _ico
+            include _logo
 
             div.container.min-height
                 block content
-            include includes/footer
+            include _footer
 
-            script(src='/javascripts/jquery/jquery-1.8.0.min.js')
-            script(src='/javascripts/bootstrap/bootstrap.min.js')
-            script(src='/javascripts/bootstrap/application.js')
-
-
-            script(src='/javascripts/backbone/underscore.js')
-            script(src='/javascripts/backbone/backbone.js')
-
-            script(src='/javascripts/noty/jquery.noty.js')
-            script(src='/javascripts/noty/layouts/bottom.js')
-            script(src='/javascripts/noty/layouts/bottomCenter.js')
-            script(src='/javascripts/noty/layouts/bottomLeft.js')
-            script(src='/javascripts/noty/layouts/bottomRight.js')
-            script(src='/javascripts/noty/layouts/center.js')
-            script(src='/javascripts/noty/layouts/centerLeft.js')
-            script(src='/javascripts/noty/layouts/centerRight.js')
-            script(src='/javascripts/noty/layouts/inline.js')
-            script(src='/javascripts/noty/layouts/top.js')
-            script(src='/javascripts/noty/layouts/topCenter.js')
-            script(src='/javascripts/noty/layouts/topLeft.js')
-            script(src='/javascripts/noty/layouts/topRight.js')
-            script(src='/javascripts/noty/themes/default.js')
-
-
-
-            <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-            <!--[if lt IE 9]>
-            script(src='/javascripts/google-code-prettify/html5.js')
-            <![endif]-->
-            script(src='/javascripts/google-code-prettify/prettify.js')
+            include _js
 
             script(src='/javascripts/app/user.js')
