prepare refactor css

--- a/app/views/layout/_js.jade
+++ b/app/views/layout/_js.jade
@@ -1,13 +1,15 @@
 
-script(src='/javascripts/jquery/jquery-1.8.0.min.js')
-script(src='/javascripts/bootstrap/bootstrap.min.js')
-script(src='/javascripts/bootstrap/application.js')
+script(src='/javascripts/jquery-1.8.0.min.js')
+script(src='/javascripts/bootstrap.min.js')
+script(src='/javascripts/application.js')
 
-script(src='/javascripts/backbone/underscore.js')
-script(src='/javascripts/backbone/backbone.js')
+script(src='/javascripts/less-1.3.3.min.js')
 
-script(src='/javascripts/alertify/alertify.min.js')
-script(src='/javascripts/spin/spin.min.js')
+script(src='/javascripts/underscore.js')
+script(src='/javascripts/backbone.js')
+
+script(src='/javascripts/alertify.min.js')
+script(src='/javascripts/spin.min.js')
 
 script(src='/javascripts/noty/jquery.noty.js')
 script(src='/javascripts/noty/layouts/bottom.js')
@@ -31,6 +33,6 @@ script(src='/javascripts/google-code-prettify/html5.js')
 <![endif]-->
 script(src='/javascripts/google-code-prettify/prettify.js')
 
-script(src='/javascripts/impress/impress.js')
+script(src='/javascripts/impress.js')
 script
     impress().init();
