--- a/app/views/layout/_css.jade
+++ b/app/views/layout/_css.jade
@@ -1,3 +1,3 @@
 link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
-link(rel='stylesheet', href='/stylesheets/style.css')
+link(rel='stylesheet', href='/stylesheets/application.less')
