--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -45,7 +45,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                                 li.divider
                                 li.nav-header 操作
                                 li
-                                  a(href='/post') 发表
+                                  a(href='/posts/new') 发表
                                 li
                                   a(href='#')
                         li
