--- a/app/views/layouts/main-layout.jade
+++ b/app/views/layouts/main-layout.jade
@@ -14,7 +14,7 @@ html(lang='en')
             include _head
             include _message
 
-            div.container.min-height
+            div.container.min-container
                 block content
             include _footer
 
