--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -1,4 +1,4 @@
-extends ../layout/review-layout
+extends ../layouts/review-layout
 
 block append head
     script(src='/javascripts/app/models.js')
