--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -6,7 +6,7 @@ script(type="text/template",id="item-template")
                 a('href=/user/"<%- creator._id %>"')
                     img('src="<%- creator.thumbnails %>"',class='img-polaroid img-rounded')
                 | &nbsp;&nbsp;&nbsp;
-                a('href=/post/"<%- _id %>"') <%- title %>
+                a('href=/posts/"<%- _id %>"') <%- title %>
 
         div.span4
             div.pull-right
