--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -1,4 +1,4 @@
-extends ../layout/main-layout
+extends ../layouts/main-layout
 
 block append head
 
@@ -7,7 +7,7 @@ block content
         div.container-fluid
             div.row-fluid
                 div.span12.well-no-back
-                    form(class='form-inline center',action='/post',method='post')
+                    form(class='form-inline center',action='/posts',method='post')
                         legend 发表
                         div.control-group
                             label(class='control-label', for='title') 标题：
