refactor login page

--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -25,7 +25,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                 ul.nav.pull-right
                     if typeof(user) === 'undefined' || user === null || user === ''
 
-                        li.vertical-align.li-padding
+                        li.login-bar
                             span.height-auto
                                a(href='/login') [登录]
                                &nbsp / &nbsp
