--- a/app/views/layouts/logo-layout.jade
+++ b/app/views/layouts/logo-layout.jade
@@ -10,7 +10,7 @@ html(lang='en')
             include _ico
             include _logo
 
-            div.container.min-height
+            div.container.min-container
                 block content
             include _footer
 
