--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -80,6 +80,23 @@ body {
 }
 
 
+/**one post**/
+.article{
+    border: 1px solid #CACACA;
+    padding: 5px 10px;
+    .rounded-corners;
+    .title{
+        div{
+          vertical-align:bottom;
+        }
+
+    }
+    .content{
+        margin-top: 10px;
+    }
+}
+
+
 /**login page cess**/
 @grey:#E0E0E0;
 @margin-top:140px;
