--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -21,7 +21,7 @@ block content
                     each post, i in posts
                         div.row-fluid
                             div.span8
-                                a(href='/post/#{post._id}')
+                                a(href='/posts/#{post._id}')
                                     | #{post.title}
                             div.span4
                                 small.pull-right
