--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -95,7 +95,9 @@ body {
         margin-top: 10px;
     }
 }
-
+.comment{
+    margin-bottom: 10px;
+}
 
 /**login page cess**/
 @grey:#E0E0E0;
@@ -148,7 +150,7 @@ body {
     .login-common;
     margin-bottom: 20px;
     height: 30px;
-    width:425px;
+
     display: block;
 }
 
