--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -1,9 +1,16 @@
-extends ../layout/logo-layout
+extends ../layouts/logo-layout
 
 block append head
 
 block content
     body
+        div.container
+            if typeof(success) !== 'undefined' && success !== null && success!==''
+                div(class='alert alert-success')
+                    #{success}
+            if typeof(error) !== 'undefined' && error !== null && error!==''
+                div(class='alert alert-error')
+                    #{error}
         div.container
             form(action='/reg',method='post', class='form-horizontal')
                 fieldset
@@ -13,15 +20,21 @@ block content
                     div.control-group
                         label(class='control-label', for='username') 用户名
                         div.controls
-                            input(name='username',type='text')
+
+                                input(name='username',type='text')
+
                     div.control-group
                         label(class='control-label',for='password') 密码
                         div.controls
-                            input(name='password',type='password')
+
+                                input(name='password',type='password')
+
                     div.control-group
                         label(class='control-label',for='password-repeat') 密码确认
                         div.controls
-                            input(name='password-repeat',type='password')
+
+                                input(name='password-repeat',type='password')
+
                     div.control-group
                         label(class='control-label',for='email') Email
                         div.controls
