--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -38,9 +38,9 @@ div.navbar.navbar-inverse.navbar-fixed-top
                                 b.caret
                               ul.dropdown-menu
                                 li
-                                  a(href='/user') 我的资料
+                                  a(href='/users') 我的资料
                                 li
-                                  a(href='/user/#{user._id}') 我的主页
+                                  a(href='/users/#{user._id}') 我的主页
 
                                 li.divider
                                 li.nav-header 操作
