--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -8,7 +8,7 @@ block content
             h3.title 我的资料
         div(class='row-fluid well-no-back')
             p
-                a(href='user/edit')  编辑
+                a(href='users/edit')  编辑
             div(class='span6')
                 table(class='table table-striped')
                     tbody
