add less to assert and compiled success, refined login page success

--- a/app/views/users/_tip.jade
+++ b/app/views/users/_tip.jade
@@ -2,6 +2,5 @@ div(id='tip',class='tip')
 
 <!-- Templates -->
 script(type="text/template",id="item-template")
-    h4 <%- title %>
-    | <%- content %>
+    <%- content %>
 
