--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -3,7 +3,7 @@ script(type="text/template",id="item-template")
     div.row-fluid
         div.span8
             p
-                a('href=/user/"<%- creator._id %>"')
+                a('href=/users/"<%- creator._id %>"')
                     img('src="<%- creator.thumbnails %>"',class='img-polaroid img-rounded')
                 | &nbsp;&nbsp;&nbsp;
                 a('href=/posts/"<%- _id %>"') <%- title %>
