--- a/app/views/layouts/_css.jade
+++ b/app/views/layouts/_css.jade
@@ -1,3 +1,3 @@
 link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
-link(rel='stylesheet/less', href='/stylesheets/application.less')
+link(rel='stylesheet', href='/stylesheets/application.css')
