--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,8 +1,7 @@
 extends layouts/main-layout
 
 block append head
-    script(src='/javascripts/app/models.js')
-    script(src='/javascripts/app/home.js')
+
 block content
     body
         div(id='home-div',class='row-fluid')
@@ -17,3 +16,5 @@ block content
                                 include home/post-content-bone
             div(class='span4 relative')
                 h3.title 相关信息
+
+        script(data-main='/javascripts/app/home.js',src='/javascripts/require-jquery.js')
