--- a/app/views/layouts/_js.jade
+++ b/app/views/layouts/_js.jade
@@ -1,31 +1,7 @@
 
-script(src='/javascripts/jquery-1.8.0.min.js')
+script(src='/javascripts/jquery-1.9.1.min.js')
 script(src='/javascripts/bootstrap.min.js')
-script(src='/javascripts/application.js')
-
-script(src='/javascripts/less-1.3.3.min.js')
-
-script(src='/javascripts/underscore.js')
-script(src='/javascripts/backbone.js')
-
-script(src='/javascripts/alertify.min.js')
-script(src='/javascripts/spin.min.js')
-
-script(src='/javascripts/noty/jquery.noty.js')
-script(src='/javascripts/noty/layouts/bottom.js')
-script(src='/javascripts/noty/layouts/bottomCenter.js')
-script(src='/javascripts/noty/layouts/bottomLeft.js')
-script(src='/javascripts/noty/layouts/bottomRight.js')
-script(src='/javascripts/noty/layouts/center.js')
-script(src='/javascripts/noty/layouts/centerLeft.js')
-script(src='/javascripts/noty/layouts/centerRight.js')
-script(src='/javascripts/noty/layouts/inline.js')
-script(src='/javascripts/noty/layouts/top.js')
-script(src='/javascripts/noty/layouts/topCenter.js')
-script(src='/javascripts/noty/layouts/topLeft.js')
-script(src='/javascripts/noty/layouts/topRight.js')
-script(src='/javascripts/noty/themes/default.js')
-
+script(src="/javascripts/app/requirejs-config.js")
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
