refined, all js using requirejs

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -17,4 +17,4 @@ block content
             div(class='span4 relative')
                 h3.title 相关信息
 
-        script(data-main='/javascripts/app/home.js',src='/javascripts/require-jquery.js')
+        script(data-main='/javascripts/app/home.js',src='/javascripts/require.js')
