--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -33,4 +33,4 @@ block content
                     div(class='row-fluid')
                         div(class='span8') <%- content %>
 
-        script(data-main='/javascripts/app/review.js',src='/javascripts/require-jquery.js')
+        script(data-main='/javascripts/app/review.js',src='/javascripts/require.js')
