--- a/app/views/layouts/_js.jade
+++ b/app/views/layouts/_js.jade
@@ -1,6 +1,5 @@
 
-script(src='/javascripts/jquery-1.9.1.min.js')
-script(src='/javascripts/bootstrap.min.js')
+script(data-main='/javascripts/app/application.js',src='/javascripts/require.js')
 script(src="/javascripts/app/requirejs-config.js")
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
