add first coffeescript and refine post show page

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -78,23 +78,31 @@ body {
   border: 1px solid;
   .rounded-corners
 }
-
+.face-thumbnails{
+  width: 40px;
+  height: 40px;
+}
 
 /**one post**/
+
+.popover{
+  display: block;
+
+  position: relative;
+
+}
+.popover.right{
+  .arrow{
+    top:20%;
+  }
+}
+.content{
+  padding: 5px 10px 5px 10px;
+}
+
 .article{
-  border: 1px solid #CACACA;
-  padding: 5px 10px;
-  .rounded-corners;
-  .title{
 
-    div{
-      vertical-align:bottom;
-    }
 
-  }
-  .content{
-    margin-top: 10px;
-  }
 }
 .comment{
   margin-bottom: 10px;
