refined home up-down

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -57,6 +57,11 @@ body {
 }
 
 /**home page cess**/
+.up-down-cover{
+  position: absolute;
+  text-align: center;
+  color: #cc0000;
+}
 .login-bar{
   vertical-align: baseline;
   position: relative;
