--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -7,7 +7,7 @@ block content
         div(id='review-container',class='container')
             div(class='row-fluid')
                 div(id='post-content',class='span8')
-
+                    div(id='spinner')
                 div(class='span4 well-no-back')
                     h3 我觉得这篇文章
                     p 有下列情景
