--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -6,8 +6,17 @@ block content
     body
         div(id='review-container',class='container')
             div(class='row-fluid')
+
                 div(id='post-content',class='span8')
-                    div(id='spinner')
+                    div(class='row-fluid')
+                        div(class='span8')
+                            h4 #{post.title}
+                    hr
+                    div(class='row-fluid')
+                        div(class='span8') #{post.content}
+                form(id='review-form',action='/review',method='post')
+                    input(id='post-id',type='hidden',name='postId',value='#{post._id}')
+                    input(id='passed',type='hidden',name='passed',value='')
                 div(class='span4 well-no-back')
                     h3 我觉得这篇文章
                     p 有下列情景
