--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -5,10 +5,13 @@ block append head
 block content
     body
         div.container-fluid
+            div(class='alert alert-error')
+                h4 发布的文章通过审核后读者才能看到
             div.row-fluid
                 div.span12.well-no-back
                     form(class='form-inline center',action='/posts',method='post')
                         legend 发表
+
                         div.control-group
                             label(class='control-label', for='title') 标题：
                             div.controls
