change project nema to @china

--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -5,7 +5,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.brand(href='/') 翱翔中国
+            a.brand(href='/') @中国
             div.nav-collapse.collapse
                 ul.nav
 
